--- a/class.html
+++ b/class.html
@@ -3394,7 +3394,7 @@ struct D : B1, B2 {
 };
 
 D::D(int a) : B2(a+1), B1(a+2), c(a+3), b(a+4) { <span class='tcode_in_codeblock'>/* ...&nbsp;*/</span> }
-D d(10);</pre> —<span style='white-space:nowrap'> </span><i>end example</i></div><span style='white-space:nowrap'> </span>]</div>  <div id='base.init-7.note-1' class='note'>[<span style='white-space:nowrap'> </span><a class='note_link' href='#base.init-7.note-1'><span class='textit'>Note</span></a><div class='noteBody'><span class='textit'>:</span> <div id='base.init-7.sentence-3' class='sentence'><span class='setlength'></span><span class='emergencystretch'></span>1em
+D d(10);</pre> —<span style='white-space:nowrap'> </span><i>end example</i></div><span style='white-space:nowrap'> </span>]</div>  <div id='base.init-7.note-1' class='note'>[<span style='white-space:nowrap'> </span><a class='note_link' href='#base.init-7.note-1'><span class='textit'>Note</span></a><div class='noteBody'><span class='textit'>:</span> <div id='base.init-7.sentence-3' class='sentence'>
 The initialization
 performed by each <i ><a href='class.base.init#nt:mem-initializer'>mem-initializer</a></i>
 constitutes a full-expression (<a href='intro.execution'>[intro.execution]</a>)<a class='hidden_link' href='#base.init-7.sentence-3'>.</a></div> <div id='base.init-7.sentence-4' class='sentence'>Any expression in
