--- a/execution.syn.html
+++ b/execution.syn.html
@@ -257,7 +257,7 @@
   <span class='keyword'>template</span><span class='anglebracket'>&lt;</span><span class='keyword'>class</span> Sigs<span class='anglebracket'>&gt;</span>
     <span class='keyword'>concept</span> <a class='index' id='conceptref:valid-completion-signatures'></a><i >valid-completion-signatures</i> <span class='operator'>=</span> <i ><span class='texttt'>see below</span></i>;            <span class='comment'>// <i >exposition only</i></span>
 
-  <span class='comment'>// <a href='exec.util.cmplsig.trans' title='34.10.2&emsp;execution::transform_completion_signatures'>[exec.<span class='shy'></span>util.<span class='shy'></span>cmplsig.<span class='shy'></span>trans]</a></span>
+  <span class='comment'>// <a href='exec.util.cmplsig.trans' title='34.10.2&emsp;execution&#x200b;::&#x200b;transform_&shy;completion_&shy;signatures'>[exec.<span class='shy'></span>util.<span class='shy'></span>cmplsig.<span class='shy'></span>trans]</a></span>
   <span class='keyword'>template</span><span class='anglebracket'>&lt;</span>
     <a href='exec.snd.concepts#concept:valid-completion-signatures' title='34.9.3&emsp;Sender concepts&emsp;[exec.snd.concepts]'><span id='conceptref:valid-completion-signatures_'><span class='tcode_in_codeblock'><i >valid-completion-signatures</i></span></span></a> InputSignatures,
     <a href='exec.snd.concepts#concept:valid-completion-signatures' title='34.9.3&emsp;Sender concepts&emsp;[exec.snd.concepts]'><span id='conceptref:valid-completion-signatures__'><span class='tcode_in_codeblock'><i >valid-completion-signatures</i></span></span></a> AdditionalSignatures <span class='operator'>=</span> completion_signatures<span class='anglebracket'>&lt;</span><span class='anglebracket'>&gt;</span>,
